@@ -3,11 +3,12 @@ package com.example.press_lab.service.category;
 import com.example.press_lab.mappers.CategoryMapper;
 import com.example.press_lab.repository.CategoryRepository;
 import com.example.press_lab.response.category.CategoryResponse;
+import com.example.press_lab.util.LocaleResolverUtil;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Locale;
 
 @Service
 @RequiredArgsConstructor
@@ -15,14 +16,13 @@ public class CategoryReadAllService {
 
     private final CategoryRepository categoryRepository;
 
-    private final CategoryMapper categoryMapper;
+    private final LocaleResolverUtil localeResolverUtil;
 
-    public List<CategoryResponse> getAllCategory(){
-       return categoryRepository.findAll()
+    public List<CategoryResponse> getAllCategory(Locale locale) {
+        return categoryRepository.findAll()
                 .stream()
-                .map(categoryMapper::mapCategoryToResponse)
-                .collect(Collectors.toList());
-
+                .map(category -> localeResolverUtil.setForLocalCategory(category, locale))
+                .toList();
     }
 
 }
